examples/test/testpolicy9102.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9102
  namespace: namespace379
spec:
  podSelector:
    matchLabels:
      key43: value25
      key35: value23
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value47
          key36: value7
          key39: value35
      podSelector:
        matchLabels:
          key25: value22
